--- a/Server/Webapp/app/index.html
+++ b/Server/Webapp/app/index.html
@@ -58,10 +58,10 @@
 		          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<span class="caret"></span></a>
 		          <ul class="dropdown-menu">
 		            <li><a href="#music">Musique</a></li>
-		            <!-- <li><a href="#geo">Géolocalisation</a></li> -->
+		            <li><a href="#geo">Géolocalisation</a></li>
 		            <li><a href="#devices">Appareils Connectés</a></li>
-		            <!-- <li role="separator" class="divider"></li>
-		            <li><a href="/owncloud">Cloud</a></li> -->
+		            <li role="separator" class="divider"></li>
+		            <li><a href="/owncloud">Cloud</a></li>
 		          </ul>
 		        </li>
               <li><a ng-href="#settings">Paramètres</a></li>
