--- a/Server/Webapp/app/index.html
+++ b/Server/Webapp/app/index.html
@@ -163,6 +163,7 @@
         <script src="scripts/controllers/song_settings.js"></script>
         <script src="scripts/controllers/history.js"></script>
         <script src="scripts/controllers/scenario.js"></script>
+        <script src="scripts/controllers/status_settings.js"></script>
         <!-- endbuild -->
 </body>
 </html>
