Add Cameras route

--- a/Server/Webapp/app/index.html
+++ b/Server/Webapp/app/index.html
@@ -50,6 +50,7 @@
 		          <ul class="dropdown-menu">
 		            <li><a href="#sensors">Lumières et Capteurs</a></li>
 		            <li><a href="#plantes">Plantes</a></li>
+		            <li><a href="#cameras">Caméras</a></li>
 		            <li><a href="#history">Historique</a></li>
 		          </ul>
 		      </li>
@@ -164,6 +165,7 @@
         <script src="scripts/controllers/history.js"></script>
         <script src="scripts/controllers/scenario.js"></script>
         <script src="scripts/controllers/status_settings.js"></script>
+        <script src="scripts/controllers/cameras.js"></script>
         <!-- endbuild -->
 </body>
 </html>
