--- a/Server/Webapp/app/index.html
+++ b/Server/Webapp/app/index.html
@@ -166,6 +166,7 @@
         <script src="scripts/controllers/scenario.js"></script>
         <script src="scripts/controllers/status_settings.js"></script>
         <script src="scripts/controllers/cameras.js"></script>
+        <script src="scripts/controllers/camera_settings.js"></script>
         <!-- endbuild -->
 </body>
 </html>
