--- a/Server/Webapp/app/index.html
+++ b/Server/Webapp/app/index.html
@@ -93,7 +93,7 @@
 		<ng-view></ng-view>
     </div>
     
-    <div ng-controller="ModeCtrl">
+    <div ng-hide="navigation" ng-controller="ModeCtrl">
 	    <md-fab-speed-dial md-direction="up" class="md-fling md-fab-bottom-right">
 		  <md-fab-trigger>
 		    <md-button aria-label="menu" class="md-fab md-warn">
