Add AtlantisRoot service

--- a/Server/Webapp/app/index.html
+++ b/Server/Webapp/app/index.html
@@ -191,6 +191,7 @@
     <script src="scripts/controllers/camera_add.js"></script>
     <script src="scripts/controllers/divers_settings.js"></script>
     <script src="scripts/controllers/mode.js"></script>
+    <script src="scripts/services/atlantisroot.js"></script>
     <!-- endbuild -->
 </body>
 </html>
