--- a/Server/Webapp/app/index.html
+++ b/Server/Webapp/app/index.html
@@ -196,6 +196,7 @@
     <script src="scripts/services/atlantisroot.js"></script>
     <script src="scripts/controllers/scenario_advanced.js"></script>
     <script src="scripts/controllers/log.js"></script>
+    <script src="scripts/controllers/owncloud.js"></script>
     <!-- endbuild -->
 </body>
 </html>
